src/objects/Package_Access_Flag__c.object
<CustomObject>
    <fields>
        <fullName>No_of_Concurrent_Users__c</fullName>
        <label>No. of Concurrent Users</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package_Service_Access_Flag__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Package Service Access Flag</label>
        <referenceTo>Service_Access_Flag__c</referenceTo>
        <relationshipLabel>Package Access Flags</relationshipLabel>
        <relationshipName>Package_Access_Flags</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <label>Package</label>
        <referenceTo>Package__c</referenceTo>
        <relationshipLabel>Package Access Flags</relationshipLabel>
        <relationshipName>Package_Access_Flags</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Package Access Flag</label>
    <nameField>
        <displayFormat>PAF-{0000}</displayFormat>
        <label>PAF Record No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Package Access Flags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Package_Item_Validation</fullName>
        <active>true</active>
        <description>A package item of type &quot;base product&quot; or &quot;bundle product&quot;, should have been added to the package.</description>
        <errorConditionFormula>IF(ISPICKVAL(Package__r.Package_Type__c, &apos;Base&apos;) &amp;&amp;  Package__r.Package_Item_Base_Hidden__c  &lt;=  0, true, false)
||
IF(ISPICKVAL(Package__r.Package_Type__c, &apos;Bundle&apos;) &amp;&amp;  Package__r.Package_Item_Bundle_Hidden__c  &lt;= 0, true, false)</errorConditionFormula>
        <errorMessage>Please add a package item of type &quot;base product&quot; or &quot;bundle product&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Product_Platform_Validation</fullName>
        <active>true</active>
        <description>The package item of type &quot;base product&quot; or &quot;bundle product&quot; should not belong to a Product of platform &quot;Print&quot;</description>
        <errorConditionFormula>If(OR(
$ObjectType.Package_Item__c.Fields.RecordTypeId == &apos;012N00000008jCOIAY&apos;,
$ObjectType.Package_Item__c.Fields.RecordTypeId == &apos;012N00000008jCdIAI&apos;) &amp;&amp; $ObjectType.Package_Item__c.Fields.Product_Platform__c == &apos;Print&apos;, true, false)</errorConditionFormula>
        <errorMessage>Please add a digital package item to the package.</errorMessage>
    </validationRules>
</CustomObject>